<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:background="@null"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_sponsorship"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/ex_sponsorship_title"/>
        <TextView
            android:id="@+id/tvSponsorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/ex_sponsor_name"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etTeamOrPersonalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="16sp"
        android:textColor="@color/black_light"
        android:hint="@string/team_or_personal_hint"/>

    <EditText
        android:id="@+id/etContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black_light"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:hint="@string/contact_phone_hint"/>

    <EditText
        android:id="@+id/etApplicationReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/application_reason_hint"/>

    <Button
        android:id="@+id/btApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="提交申请"
        android:background="@drawable/blue_corner_btn_click_style"/>
</LinearLayout>
