<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:paddingBottom="12dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_sponsorship_title"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/tvSponsorName"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:text="@string/ex_sponsor_name"
                android:textColor="@color/black_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUpdatedAt"
                android:text="@string/ex_sponsorship_updated_at"
                android:textColor="@color/black_light"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="1dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp">
            <Button
                android:id="@+id/btApply"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/apply"
                android:background="@drawable/blue_corner_btn_click_style"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_gravity="top"/>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/ex_sponsorship_intro"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:maxLines="3"/>


    <TextView
        android:id="@+id/tvApplyCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/ex_sponsorship_apply_condition"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:maxLines="3"/>

</LinearLayout>