<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:gravity="center_vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:text="@string/back"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/sponsorship"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.0"/>
        <Button
            android:id="@+id/btMine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:background="@null"/>
    </LinearLayout>

    <in.srain.cube.views.ptr.PtrClassicFrameLayout
        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ptrLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        cube_ptr:ptr_duration_to_close="200"
        cube_ptr:ptr_duration_to_close_header="1000"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="false"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.7">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lvSponsorships"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:fadingEdge="none"
            android:scrollbarStyle="outsideOverlay" />

    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
</LinearLayout>
